clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_scal<float> = rocblas_sscal;